<resources>
    <string name="app_name">Farda</string>
    <string name="vol">vol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zikr">Зикр</string>
    <string name="schedule">Таблица на месяц</string>
    <string name="fon">Фоновая картина</string>
    <string name="settings">Настройки</string>
    <string name="tandau">ТаҢдаулылар</string>
    <string name="i_i">ЗIкIрлер</string>
    <string name="almaty_name">Алматы</string>
    <string name="fadjr">Фаджр</string>
    <string name="kun">Восход</string>
    <string name="besin">Зухр</string>
    <string name="asr">Аср</string>
    <string name="aqsham">Магриб</string>
    <string name="quptan">Иша</string>
    <string name="qibla">Qibla</string>
</resources>