<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/main_menu_btns"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/zikr"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="25dp"
            android:paddingTop="10dp"
            android:text="@string/zikr"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/union" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D5D5D5" />
        <TextView
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="25dp"
            android:paddingTop="10dp"
            android:text="@string/schedule"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/calendar" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D5D5D5" />
        <TextView
            android:id="@+id/fon"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="25dp"
            android:paddingTop="10dp"
            android:text="@string/fon"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/gallery" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D5D5D5" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="25dp"
            android:paddingTop="10dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/setting_2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D5D5D5" />
    </LinearLayout>
</androidx.cardview.widget.CardView>