<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mosque_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ZikrFragment">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/i_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/tandau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:id="@+id/zikr_recycler"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>

    <LinearLayout
        android:id="@+id/linear_in_zikr"
        android:alpha="0.7"
        android:background="@drawable/backround_for_counter"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zikr_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/zikr_counter"
            android:gravity="center"
            android:textSize="100sp"
            android:text="0"
            android:layout_width="400dp"
            android:layout_height="200dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/component_1"
        android:backgroundTint="@color/white"
        android:contentDescription="button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linear_in_zikr" />

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/schedule"
        android:layout_gravity="bottom"
        android:id="@+id/zikr_back_button"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>